--- a/overlay/packages/apps/Mms/res/xml/mms_config.xml
+++ b/overlay/packages/apps/Mms/res/xml/mms_config.xml
@@ -22,13 +22,13 @@
 
 <mms_config version="3">
     <!-- Maximum message size in bytes for a MMS message -->
-    <int name="maxMessageSize">307200</int>
+    <int name="maxMessageSize">1258291</int>
 
     <!-- Maximum height for an attached image -->
-    <int name="maxImageHeight">1000</int>
+    <int name="maxImageHeight">1936</int>
 
     <!-- Maximum width for an attached image -->
-    <int name="maxImageWidth">1296</int>
+    <int name="maxImageWidth">2592</int>
 
     <!-- User-Agent parameter used in MMS http request -->
     <string name="userAgent">Sprint APA9292KT</string>
