--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -186,7 +186,7 @@
 
     <!-- Component name of the default wallpaper. This will be ImageWallpaper if not 
          specified -->
-    <string name="default_wallpaper_component">com.android.wallpaper/.nexus.NexusWallpaper</string>
+    <string name="default_wallpaper_component">@null</string>
 
     <!-- Enable use of power animations -->
     <bool name="config_animateScreenLights">false</bool>
