Temporarily add soft keys.

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -179,4 +179,8 @@
     <!-- Enable use of power animations -->
     <bool name="config_animateScreenLights">false</bool>
 
+    <!-- Enable soft keys -->
+    <bool name="config_showNavigationBar">true</bool>
+
+
 </resources>
