--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -17,6 +17,7 @@
  */
 -->
 <resources>
-    <bool name="def_accelerometer_rotation">true</bool>
     <bool name="def_screen_brightness_automatic_mode">true</bool>
+    <integer name="def_lockscreen_sounds_enabled">0</integer>
+    <bool name="def_install_non_market_apps">true</bool>
 </resources>
