--- a/overlay/packages/apps/Mms/res/xml/mms_config.xml
+++ b/overlay/packages/apps/Mms/res/xml/mms_config.xml
@@ -66,7 +66,11 @@
     <!-- If true, The text message over 160 characters will be sent in multi part.
          If false, The text message over 160 characters will be sent
          via multi media message. -->
-    <bool name="enableMultipartSMS">true</bool>
+    <bool name="enableMultipartSMS">false</bool>
+
+    <!-- If true, the text message will be split every 160 characters.
+         If false, the text will never be split before being sent. -->
+    <bool name="enableSplitSMS">true</bool>
 
     <!-- Maximum length for message text. Use a value of -1
          to indicate default value -->
